--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .header {
     padding: 10px 16px;
-    background: rgb(2, 1, 1);
-    color: #646161;
+    background: rgb(218, 13, 13);
+    color: #9ae098;
     text-align: center;
 }
 
